# TechSimApiCpp

./: .gitmodules  CMakeLists.txt  README.md
cmake/: SimClientConfig.cmake.in
examples/: CMakeLists.txt  test.cpp
examples/ArucoExample/: ArucoExample.cpp  CMakeLists.txt
examples/ImageCaptureExample/: CMakeLists.txt  GetImageExample.cpp
examples/LaserScanExample/: CMakeLists.txt  LaserScanExample.cpp
examples/LedExample/: CMakeLists.txt  LedExample.cpp
examples/RadarExample/: CMakeLists.txt  RadarExample.cpp
examples/RangefigeExample/: CMakeLists.txt  RangefireExample.cpp
include/: SimClient.hpp  TechSimApiClient.h
install/include/: SimClient.hpp
install/lib/: SimClient.lib
install/lib/cmake/SimClient/: SimClientConfig.cmake  SimClientTargets-debug.cmake  SimClientTargets.cmake
src/: SimClient.cpp
